<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/backgroundBlue"
    tools:context=".splash.splash">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/appTitle"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical" android:gravity="center_horizontal">

        <ImageView android:contentDescription="@string/wave" android:id="@+id/Wave"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:background="@drawable/ic_wave" />

        <ImageView android:id="@+id/imageView" android:contentDescription="@string/polsri"
            android:layout_width="200sp" android:layout_height="200sp"
            android:src="@mipmap/ic_polsri_foreground" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Wave" />

        <TextView android:id="@+id/App" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/app_name"
            android:textColor="@color/white" android:textSize="40sp" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView android:layout_width="200sp" android:layout_height="wrap_content"
            android:layout_below="@id/imageView" android:text="@string/tagLine"
            android:textAlignment="center" android:textColor="@color/white" android:textSize="15sp"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/App" android:gravity="center_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>