<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundBlue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_wave"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@mipmap/ic_polsri_foreground"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/polsri" />
        <View
            android:id="@+id/garis"
            android:layout_width="3dp"
            android:layout_height="120sp"
            android:background="@color/white"
            android:layout_toRightOf="@id/logo"
            />
        <TextView
            android:id="@+id/App"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/garis"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagLine"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_below="@id/App"
            android:layout_toRightOf="@id/garis"
            android:layout_marginLeft="10dp"
            />

        <GridLayout
            android:id="@+id/info"
            android:layout_below="@id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="25dp"
                android:text="@string/foodDesc"
                android:textColor="@color/blue"
                android:translationZ="10dp"
                android:gravity="center"
                />
        </GridLayout>

        <GridLayout
            android:layout_below="@id/info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBeratSekarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jumlah Pakan Saat ini"
                        android:textColor="@color/blue"
                        android:maxEms="7"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:gravity="center_horizontal" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Beri Pakan Setiap"
                        android:textSize="15sp"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:id="@+id/tvTimerPakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                    <Button
                        android:id="@+id/btnTimerPakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Atur"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jumlah Awal Pakan"
                        android:textSize="15sp"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:id="@+id/tvBeratPakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        />

                    <Button
                        android:id="@+id/btnBeratPakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masukkan"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/beriMakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Beri Pakan"
                        android:textStyle="bold"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textSize="15sp"
                        android:backgroundTint="@color/blue"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>
</LinearLayout>