<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundBlue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_wave"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@mipmap/ic_polsri_foreground"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/polsri" />
        <View
            android:id="@+id/garis"
            android:layout_width="3dp"
            android:layout_height="120sp"
            android:background="@color/white"
            android:layout_toRightOf="@id/logo"
            />
        <TextView
            android:id="@+id/App"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/garis"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagLine"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_below="@id/App"
            android:layout_toRightOf="@id/garis"
            android:layout_marginLeft="10dp"
            />

        <GridLayout
            android:id="@+id/menu"
            android:layout_below="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_columnSpan="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camera View"
                android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PH air"
                        android:textSize="15sp"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:id="@+id/phAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textAlignment="center"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kekeruhan Air"
                        android:textSize="15sp"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:id="@+id/turbidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:textSize="30sp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Suhu Kolam"
                        android:textSize="15sp"
                        android:textColor="@color/blue"/>
                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_columnSpan="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Volume Kolam"
                       android:textColor="@color/blue"
                       android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/siramTanaman"
                android:layout_columnSpan="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Siram Tanaman"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:drawableTop="@drawable/ic_watering"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <Button
                android:id="@+id/aliriTanaman"
                android:layout_columnSpan="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Aliri Tanaman"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:drawableTop="@drawable/ic_flow"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>



        </GridLayout>
    </RelativeLayout>
</LinearLayout>